# freedecodingtoolspy

./: README.md  pyproject.toml  test.py
freedecodingtoolspy/: __init__.py  __main__.py
