[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freedecodingtoolspy"
version = "1.0"
description = "A simple script / libary to deobuscate files obuscated with https://freecodingtools.org/py-obfuscator."
readme = "README.md"
license = { file = "LICENSE" } 
authors = [
    { name = "Admin Else", email = "adman.else@gmail.com" }
]
keywords = ["python", "obuscation", "deobuscate", "deobuscation", "freecodingtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.scripts]
freedecodingtoolspy = "__main__:main"
